--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
           </section>
           <section class="panel unit-panel">
             <div class="panel-body">
-              <div class="unit-hotkeys">Q 건조 / W 강화 / E 시대 / B 조선소 / R 속도 / 화살표 카메라 · 우클릭 이동</div>
-              <div id="selection-info" class="unit-panel-body">
-                <p class="placeholder">유닛 또는 적을 선택하세요.</p>
-              </div>
+              <div id="selection-info" class="unit-panel-body"></div>
             </div>
           </section>
           <section class="panel command-panel">
@@ -68,6 +65,7 @@
               <div id="command-grid" class="command-grid"></div>
             </div>
           </section>
+          <div class="unit-hotkeys unit-hotkeys--floating">Q 건조 / W 강화 / E 시대 / B 조선소 / R 속도 / 화살표 카메라 · 우클릭 이동</div>
         </div>
         <div id="wave-status" class="hud-help">대기</div>
       </main>
