feat: 유튜브 BGM/이벤트 오버레이 + 조건부 클립 재생 및 2:1 레이아웃 정비

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <button id="yt-btn-next" class="music-btn" title="다음 곡">⏭</button>
                   </div>
                 </div>
+                <div id="yt-event-player" class="yt-frame yt-event" style="display:none"></div>
                 <div id="yt-title" class="music-title">배경음악 준비됨</div>
               </div>
             </div>
