feat: BGM/SFX 볼륨 옵션 추가 및 유튜브/오디오 엔진 연동

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>K해군 랜덤 디펜스</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="assets/svg/icons/icon_boss.svg" type="image/svg+xml" />
   </head>
   <body>
     <div id="app" class="app">
@@ -160,11 +161,11 @@
       <div id="scene-settings" class="scene-overlay hidden">
         <div class="scene-panel">
           <h2>설정</h2>
-          <div class="setting-list">
-            <label class="setting-row">
-              <span>웨이브 종료 시 이자 적용</span>
-              <input type="checkbox" id="setting-interest" checked />
-            </label>
+            <div class="setting-list">
+              <label class="setting-row">
+                <span>웨이브 종료 시 이자 적용</span>
+                <input type="checkbox" id="setting-interest" checked />
+              </label>
             <label class="setting-row">
               <span>자동 전체화면</span>
               <input type="checkbox" id="setting-auto-fullscreen" />
@@ -176,13 +177,27 @@
                 <span id="setting-sensitivity-value">1.0</span>
               </div>
             </label>
-            <label class="setting-row">
-              <span>카메라 이동 속도</span>
-              <div class="setting-control">
-                <input type="range" id="setting-pan-speed" min="0.5" max="2.0" step="0.1" value="1.0" />
-                <span id="setting-pan-speed-value">1.0</span>
-              </div>
-            </label>
+              <label class="setting-row">
+                <span>카메라 이동 속도</span>
+                <div class="setting-control">
+                  <input type="range" id="setting-pan-speed" min="0.5" max="2.0" step="0.1" value="1.0" />
+                  <span id="setting-pan-speed-value">1.0</span>
+                </div>
+              </label>
+              <label class="setting-row">
+                <span>배경음악 볼륨</span>
+                <div class="setting-control">
+                  <input type="range" id="setting-bgm-volume" min="0" max="100" step="1" value="50" />
+                  <span id="setting-bgm-volume-value">50</span>
+                </div>
+              </label>
+              <label class="setting-row">
+                <span>효과음 볼륨</span>
+                <div class="setting-control">
+                  <input type="range" id="setting-sfx-volume" min="0" max="100" step="1" value="80" />
+                  <span id="setting-sfx-volume-value">80</span>
+                </div>
+              </label>
             <div class="help-card">
               <strong>명령 도움말</strong>
               <ul>
